--- a/src/components/RightSide/rightSide.css
+++ b/src/components/RightSide/rightSide.css
@@ -1,4 +1,47 @@
-.rightSide{
+.gridCenterCenter{
   display: grid;
   place-items: center center;
+}
+
+.displayHolder{
+  width: 100%;
+  height: 100%;
+  background: url("../../images/crater.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-blend-mode: difference;
+  background-color: rgb(61, 0, 0);
+}
+
+.regDisplay{
+  display: grid;
+  grid-template-columns: 300px 300px;
+  gap: 20px;
+  width: fit-content;
+  margin-top: 1em;
+}
+
+.infoPic{
+  width: 300px;
+  background-color: white;
+  border: 1px black solid;
+  border-radius: 5px;
+}
+
+.infoBox{
+  padding: 3px;
+  font-size: 12px;
+}
+
+.roverPic{
+  width: 100%;
+}
+
+.infoLabel{
+  color: darkred;
+}
+
+.infoText{
+  font-size: 11px;
 }
