--- a/src/components/LeftSide/leftSide.css
+++ b/src/components/LeftSide/leftSide.css
@@ -1,7 +1,82 @@
 .leftSide{
-  background-color: grey;
+  background-color: rgba(15, 15, 48, 0.945);
+}
+
+.control{
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  background-color: rgb(15, 15, 48);
+  color: white;
+}
+
+.controlBox{
+  border-bottom: .25px rgb(247, 247, 247) solid;
+}
+
+.selectDiv{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.controlBox label{
+  display: block;
+  text-align: center;
+}
+
+.controlInside{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.solInput{
+  padding: 5px;
+  font-size: 16px;
+  text-align: center;
+  width: 200px;
+  border-radius: 5px;
+  border: 1px #333 solid;
+}
+
+.solInput:focus{
+  outline: none;
+  box-shadow: inset 0 0 2px black;
+}
+
+.cameraBtns{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2px;
+}
+
+.btn{
+  background-color: #333;
+  border: 1px #333 solid;
+  padding: 3px 6px;
+  color: white;
+  font-size: 14px;
+}
+
+.btn:focus{
+  outline: none;
+}
+
+.btn:active{
+  transform: scale(.95);
+}
+
+.btn:hover{
+  background-color: rgb(139, 44, 0);
+  color: white;
 }
 
 .selected{
-  background-color: red;
+  background-color: white;
+  color: #333;
 }
