--- a/src/components/RightSide/rightSide.css
+++ b/src/components/RightSide/rightSide.css
@@ -1,3 +1,8 @@
+.rightSide{
+  width: 100%;
+  height: 100%;
+}
+
 .gridCenterCenter{
   display: grid;
   place-items: center center;
@@ -14,6 +19,12 @@
   background-color: rgb(61, 0, 0);
 }
 
+.loaderPlace{
+  height: 100%;
+  width: 100%;
+  background-color: #111;
+}
+
 .regDisplay{
   display: grid;
   grid-template-columns: 300px 300px;
@@ -25,8 +36,6 @@
 .flipDisplay{
   height: 100%;
   width: 100%;
-  /* display: grid; */
-  /* place-items: center center; */
   background: url("../../images/crater.jpg");
   background-attachment: fixed;
   background-position: center;
