--- a/src/components/LeftSide/leftSide.css
+++ b/src/components/LeftSide/leftSide.css
@@ -9,12 +9,11 @@
   max-height: 100vh;
   display: grid;
   grid-template-rows: repeat(5, 1fr);
-  background-color: rgb(15, 15, 48);
-  color: white;
+  background-color: #222;
 }
 
 .controlBox{
-  border-bottom: .25px rgb(247, 247, 247) solid;
+  border-bottom: .5px white solid;
 }
 
 .selectDiv{
@@ -26,6 +25,8 @@
 .controlBox label{
   display: block;
   text-align: center;
+  color: white;
+  font-weight: 600;
 }
 
 .controlInside{
@@ -56,8 +57,8 @@
 }
 
 .btn{
-  background-color: #333;
-  border: 1px #333 solid;
+  background-color: #555;
+  border: 1px darkred solid;
   padding: 3px 6px;
   color: white;
   font-size: 14px;
