--- a/src/components/Rovers/rovers.css
+++ b/src/components/Rovers/rovers.css
@@ -5,3 +5,10 @@
   display: grid;
   grid-template-columns: 300px auto; 
 }
+
+@media (max-width: 1000px) {
+  .container{
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px auto; 
+  }
+}
