--- a/src/components/RightSide/rightSide.css
+++ b/src/components/RightSide/rightSide.css
@@ -25,6 +25,15 @@
   background-color: #111;
 }
 
+.landingPlace{
+  height: 100%;
+  width: 100%;
+  /* background-color: dodgerblue; */
+  background: url("../../images/opportunity_selfie.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+
 .regDisplay{
   display: grid;
   grid-template-columns: 300px 300px;
