--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -1,7 +1,15 @@
 .landingPage{
   color: white;
-  background-color: rgba(51, 51, 51, 0.644);
+  background-color: rgba(49, 49, 49, 0.89);
   width: 50%;
   min-width: 350px;
-  padding: 10px 5px;
+  padding: 15px 25px;
+  border-radius: 5px;
+  line-height: 1.5;
+  letter-spacing: 1.2px;
+}
+
+.landingTitle{
+  letter-spacing: 3.8px;
+  text-decoration: underline;
 }
